# mapping-navigation-robot

./: README.md
riggu_pico/: CMakeLists.txt  riggu-microros_firmware.cpp
scripts/: bot_vel_pub.py  joy.py  lqr_control.py  pid_control.py  pid_vel.py
